...
      }
    },
    "仅移除分组": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "保存": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "关闭": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "关闭收集提示": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "回收站": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "回收站为空": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "多选": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "大附件": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "完成": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "完整备份已导出。请确认外部位置并妥善保管。": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "导出备份": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "导出所选资料": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "导出资料": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "已保存的网页正文": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "已取消导出，未更新完整备份时间。": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "打开回收站": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "操作": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "收藏夹名称": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "收藏详情": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "数据与备份": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "暂无可读取的附件。": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "未分组": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "未选择": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "添加内容": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "确定": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "移除当前收藏夹": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "移除收藏夹？": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "设置": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "资料包已导出，可解压后打开 README.md 阅读。": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "通用资料包已导出，可解压后打开 README.md 阅读。": {
      "localizations": {
        "zh-Hans": {
...
      }
    },
    "重命名当前收藏夹": {
      "localizations": {
        "zh-Hans": {
...
